# iws-wincare

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
src/: __init__.py  app.py
src/core/: __init__.py  executor.py  validator.py
src/modules/: __init__.py  base.py
src/modules/bugfix/: __init__.py  dns_flush.py  env_refresh.py  explorer_cache.py  network_adapter.py  temp_cleanup.py  update_cache.py  winsock_reset.py
src/modules/reset/: __init__.py  default_apps.py  network_reset.py  power_plan.py  search_index.py  startmenu_reset.py  update_reset.py
src/system/: __init__.py  admin.py  commands.py  platform_check.py
src/ui/: __init__.py  icon.py  main_window.py  styles.py
src/ui/widgets/: __init__.py  action_card.py  status_bar.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_modules.py
