[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iws-wincare"
version = "1.0.0"
description = "Professional Windows 10/11 repair and system maintenance toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "IWS-Webcode.eu", email = "info@iws-webcode.eu"}
]
keywords = ["windows", "repair", "reset", "toolkit", "maintenance", "system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.5.0",
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/IWS-Webcode-PR/iws-wincare"
Repository = "https://github.com/IWS-Webcode-PR/iws-wincare"
Issues = "https://github.com/IWS-Webcode-PR/iws-wincare/issues"

[project.scripts]
iws-wincare = "src.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
